--- a/src/css/576px.css
+++ b/src/css/576px.css
@@ -283,6 +283,7 @@
 						width: 100%;
 						padding: 0;
 						margin: 0;
+						height: 80%;
 					}
 					.comentario p#data{
 						font-size: 0.75em;
